<?xml version="1.0" encoding="utf-8"?>
<ScrollView
 	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<LinearLayout
  android:layout_width="fill_parent"
  android:layout_height="wrap_content" android:orientation="vertical" android:padding="3pt" android:isScrollContainer="true">
    <TextView android:layout_width="wrap_content" android:text="@string/app_name" android:layout_height="wrap_content" android:textSize="14pt" android:id="@+id/textview_title"></TextView>
    <TextView android:text="" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="8pt" android:id="@+id/textveiw_version"></TextView>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copyright" android:id="@+id/textview_copy" android:layout_marginTop="2pt"></TextView>
    <TextView android:id="@+id/textview_contact" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/contact" android:layout_marginTop="2pt"></TextView>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3pt" android:text="@string/back" android:id="@+id/button_back"></Button>
</LinearLayout>
</ScrollView>