<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical">
    <TextView android:id="@+id/textViewTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" android:padding="5px" android:textSize="10pt"></TextView>
    <TableLayout android:layout_height="wrap_content" android:id="@+id/tableLayout1" android:layout_width="fill_parent">
        <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ToggleButton android:id="@+id/toggleButton1" android:layout_width="wrap_content" android:layout_height="wrap_content"  android:textOn="@string/lock" android:textOff="@string/lock" android:enabled="false" android:layout_gravity="center_vertical"></ToggleButton>
            <TextView android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:textSize="9pt" android:layout_width="wrap_content" android:padding="5px" android:text="@string/empty"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ToggleButton android:id="@+id/toggleButton2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/lock" android:textOff="@string/lock" android:enabled="false" android:layout_gravity="center_vertical"></ToggleButton>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_gravity="center_vertical" android:textSize="9pt" android:padding="5px" android:text="@string/empty"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ToggleButton android:id="@+id/toggleButton3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/lock" android:textOff="@string/lock" android:enabled="false" android:layout_gravity="center_vertical"></ToggleButton>
            <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:textSize="9pt" android:padding="5px" android:text="@string/empty"></TextView>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ToggleButton android:id="@+id/toggleButton4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/lock" android:textOff="@string/lock" android:enabled="false" android:layout_gravity="center_vertical"></ToggleButton>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView4" android:layout_gravity="center_vertical" android:textSize="9pt" android:padding="5px" android:text="@string/empty"></TextView>
        </TableRow>
    </TableLayout>
    <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:editable="false" android:id="@+id/textPass" android:cursorVisible="false"></EditText>
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content">
        <Button android:text="@string/clear" android:layout_width="wrap_content" android:id="@+id/clear" android:layout_height="wrap_content"></Button>
        <Button android:text="@string/generate" android:layout_width="fill_parent" android:id="@+id/generate" android:layout_height="wrap_content"></Button>
    </LinearLayout>
</LinearLayout>
